--- a/src/app/courses/course/course.component.html
+++ b/src/app/courses/course/course.component.html
@@ -3,6 +3,14 @@
 
   <div *ngIf="courses$ | async as courses; else loading">
     <table mat-table [dataSource]="courses" class="mat-elevation-z8">
+
+
+      <!-- ID Column -->
+      <ng-container matColumnDef="_id">
+        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <td mat-cell *matCellDef="let course">{{ course._id }}</td>
+      </ng-container>
+
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Name Course</th>
@@ -14,12 +22,11 @@
         <th mat-header-cell *matHeaderCellDef>Category Course</th>
         <td mat-cell *matCellDef="let course">
           {{ course.category }}
-          <mat-icon
-            aria-hidden="false"
-            aria-label="Category of course"
-          > {{ course.category | category }}</mat-icon>
+          <mat-icon aria-hidden="false" aria-label="Category of course"> {{ course.category | category }}</mat-icon>
         </td>
       </ng-container>
+
+
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
